--- a/openchrom/sites/net.openchrom.platform.updateSite/pom.xml
+++ b/openchrom/sites/net.openchrom.platform.updateSite/pom.xml
@@ -11,7 +11,9 @@
 	<artifactId>net.openchrom.platform.updateSite</artifactId>
 	<version>1.4.0-SNAPSHOT</version>
 	<packaging>eclipse-repository</packaging>
-
+	<properties>
+		<skip.install>true</skip.install>
+	</properties>
 
 	<build>
 		<plugins>
