Fix project descriptions/ids

--- a/openchrom/releng/net.openchrom.aggregator/.project
+++ b/openchrom/releng/net.openchrom.aggregator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cbi</name>
+	<name>net.openchrom.aggregator</name>
 	<comment></comment>
 	<projects>
 	</projects>
