--- a/openchrom/releng/net.openchrom.aggregator/pom.xml
+++ b/openchrom/releng/net.openchrom.aggregator/pom.xml
@@ -7,8 +7,7 @@
     <version>1.4.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
-  <groupId>net.openchrom</groupId>
-  <artifactId>aggregator</artifactId>
+  <artifactId>net.openchrom.aggregator</artifactId>
   <packaging>pom</packaging>
   <!--
 	DESCRIPTION
