Fix version in product

--- a/openchrom/releng/net.openchrom.targetplatform/.project
+++ b/openchrom/releng/net.openchrom.targetplatform/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>openchrom.targetplatform</name>
+	<name>net.openchrom.targetplatform</name>
 	<comment></comment>
 	<projects>
 	</projects>
