Revert "Merge branch 'develop' into wavelet-peak-detector"
This reverts commit c86a55e56818deed9a2657a7afef7e0d1252b7d6, reversing
changes made to 6a48e07eba4d839881d4910ec48512a59908a291.

--- a/openchrom/releng/net.openchrom.targetplatform/.project
+++ b/openchrom/releng/net.openchrom.targetplatform/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.openchrom.targetplatform</name>
+	<name>openchrom.targetplatform</name>
 	<comment></comment>
 	<projects>
 	</projects>
