--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -79,10 +79,20 @@
          point="org.eclipse.chemclipse.chromatogram.msd.peak.detector.peakDetectorSupplier">
       <PeakDetector
             description="This is the template UI peak detector (MSD)."
-            id="net.openchrom.xxd.process.supplier.templates.ui"
+            id="net.openchrom.xxd.process.supplier.templates.ui.msd"
             peakDetector="net.openchrom.xxd.process.supplier.templates.ui.core.PeakDetectorMSD"
             peakDetectorName="Template Peak Detector UI (MSD)"
             peakDetectorSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakDetectorSettings">
       </PeakDetector>
-   </extension>   
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.chromatogram.csd.peak.detector.peakDetectorSupplier">
+      <PeakDetector
+            description="This is the template UI peak detector (CSD)."
+            id="net.openchrom.xxd.process.supplier.templates.ui.csd"
+            peakDetector="net.openchrom.xxd.process.supplier.templates.ui.core.PeakDetectorCSD"
+            peakDetectorName="Template Peak Detector UI (CSD)"
+            peakDetectorSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakDetectorSettings">
+      </PeakDetector>
+   </extension>      
 </plugin>
