--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates/plugin.xml
@@ -154,6 +154,17 @@
             isExportable="true"
             isImportable="false">
       </ChromatogramSupplier>
+      <ChromatogramSupplier
+            description="Exports a Report Template "
+            exportConverter="net.openchrom.xxd.process.supplier.templates.io.ReportExport"
+            fileExtension="txt"
+            fileName="ReportTemplate.txt"
+            filterName="Template Chromatogram Report (*.txt)"
+            id="net.openchrom.xxd.process.supplier.templates.export.reportTemplateMSD"
+            importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>       
    </extension>
    <extension
          point="org.eclipse.chemclipse.csd.converter.chromatogramSupplier">
@@ -200,6 +211,29 @@
             importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
             isExportable="true"
             isImportable="false">
-      </ChromatogramSupplier>     
+      </ChromatogramSupplier>
+      <ChromatogramSupplier
+            description="Exports a Report Template "
+            exportConverter="net.openchrom.xxd.process.supplier.templates.io.ReportExport"
+            fileExtension="txt"
+            fileName="ReportTemplate.txt"
+            filterName="Template Chromatogram Report (*.txt)"
+            id="net.openchrom.xxd.process.supplier.templates.export.reportTemplateCSD"
+            importMagicNumberMatcher="net.openchrom.xxd.process.supplier.templates.io.MagicNumberMatcher"
+            isExportable="true"
+            isImportable="false">
+      </ChromatogramSupplier>               
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.chromatogram.xxd.report.chromatogramReportSupplier">
+      <ChromatogramReportSupplier
+            description="Template Chromatogram Report"
+            fileExtension=".txt"
+            fileName="TemplateReport"
+            id="org.eclipse.chemclipse.chromatogram.xxd.report.supplier.openchrom.templateChromatogramReport"
+            reportGenerator="net.openchrom.xxd.process.supplier.templates.chromatogram.ChromatogramReport"
+            reportName="Template Chromatogram Report (*.txt)"
+            reportSettings="net.openchrom.xxd.process.supplier.templates.settings.ChromatogramReportSettings">
+      </ChromatogramReportSupplier>         
    </extension>
 </plugin>
