It's possible to adapt the settings page. Improvements are required.
It's not possible at the moment to display a dialog with several
options, e.g. export path, boolean settings. This should be improved.

--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -117,5 +117,14 @@
                type="org.eclipse.chemclipse.ux.extension.xxd.ui.methods.SettingsUIProvider">
          </adapter>
       </factory>
-   </extension>      
+      <!-- Implement to display additional settings.
+      <factory
+            adaptableType="net.openchrom.xxd.process.supplier.templates.settings.ChromatogramReportSettings"
+            class="net.openchrom.xxd.process.supplier.templates.ui.adapter.ReportSettingsAdapterFactory">
+         <adapter
+               type="org.eclipse.chemclipse.ux.extension.xxd.ui.methods.SettingsUIProvider">
+         </adapter>
+      </factory>
+      -->   
+   </extension>   
 </plugin>
