--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -102,6 +102,16 @@
       </PeakDetector>
    </extension>
    <extension
+         point="org.eclipse.chemclipse.chromatogram.msd.identifier.peakIdentifier">
+      <PeakIdentificationSupplier
+            description="This peak identifier supports reviewing identifications via a template."
+            id="net.openchrom.xxd.process.supplier.templates.ui.peaks.identifier.msd"
+            identifier="net.openchrom.xxd.process.supplier.templates.ui.core.PeakReviewMSD"
+            identifierName="Template Peak Review (MSD)"
+            identifierSettings="net.openchrom.xxd.process.supplier.templates.settings.ChromatogramReviewSettings">
+      </PeakIdentificationSupplier>
+   </extension>    
+   <extension
          point="org.eclipse.core.runtime.adapters">
       <factory
             adaptableType="net.openchrom.xxd.process.supplier.templates.settings.PeakDetectorSettings"
@@ -125,6 +135,13 @@
                type="org.eclipse.chemclipse.ux.extension.xxd.ui.methods.SettingsUIProvider">
          </adapter>
       </factory>
-      -->   
+      -->
+      <factory
+            adaptableType="net.openchrom.xxd.process.supplier.templates.settings.ChromatoramReviewSettings"
+            class="net.openchrom.xxd.process.supplier.templates.ui.adapter.ReviewSettingsAdapterFactory">
+         <adapter
+               type="org.eclipse.chemclipse.ux.extension.xxd.ui.methods.SettingsUIProvider">
+         </adapter>
+      </factory>      
    </extension>   
 </plugin>
