--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -37,6 +37,12 @@
             category="org.eclipse.chemclipse.chromatogram.csd.identifier.ui.preferences.preferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakIdentifierCSD"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakIdentifierCSD">
+      </page>
+      <page
+            name="Peak Review Template (MSD)"
+            category="org.eclipse.chemclipse.chromatogram.msd.identifier.ui.preferences.identifierPreferencePage"
+            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakReviewMSD"
+            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakReviewMSD">
       </page>        
       <page
             name="Standards Assigner (ISTD)"
