--- a/openchrom/plugins/net.openchrom.chromatogram.msd.identifier.supplier.cdk.ui/build.properties
+++ b/openchrom/plugins/net.openchrom.chromatogram.msd.identifier.supplier.cdk.ui/build.properties
@@ -15,6 +15,4 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                plugin.xml,\
-               fragment.e4xmi,\
-               html/,\
-               toc_plugin.xml
+               fragment.e4xmi
