--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -43,7 +43,13 @@
             category="org.eclipse.chemclipse.chromatogram.msd.identifier.ui.preferences.identifierPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakReviewMSD"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakReviewMSD">
-      </page>        
+      </page>
+      <page
+            name="Peak Review Template (CSD)"
+            category="org.eclipse.chemclipse.chromatogram.csd.identifier.ui.preferences.identifierPreferencePage"
+            class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakReviewCSD"
+            id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakReviewCSD">
+      </page>              
       <page
             name="Standards Assigner (ISTD)"
             category="org.eclipse.chemclipse.chromatogram.msd.quantitation.ui.preferences.quantifierPreferencePage"
@@ -116,7 +122,17 @@
             identifierName="Template Peak Review UI (MSD)"
             identifierSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakReviewSettings">
       </PeakIdentificationSupplier>
-   </extension>    
+   </extension>
+   <extension
+         point="org.eclipse.chemclipse.chromatogram.csd.identifier.peakIdentifier">
+      <PeakIdentificationSupplier
+            description="This peak identifier supports reviewing identifications via a template."
+            id="net.openchrom.xxd.process.supplier.templates.ui.peaks.identifier.csd"
+            identifier="net.openchrom.xxd.process.supplier.templates.ui.core.PeakReviewCSD"
+            identifierName="Template Peak Review UI (CSD)"
+            identifierSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakReviewSettings">
+      </PeakIdentificationSupplier>
+   </extension>       
    <extension
          point="org.eclipse.core.runtime.adapters">
       <factory
