--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -96,34 +96,34 @@
    <extension
          point="org.eclipse.chemclipse.chromatogram.msd.peak.detector.peakDetectorSupplier">
       <PeakDetector
-            description="This is the template UI peak detector (MSD)."
+            description="This is the template UI peak detector."
             id="net.openchrom.xxd.process.supplier.templates.ui.msd"
             peakDetector="net.openchrom.xxd.process.supplier.templates.ui.core.PeakDetectorMSD"
-            peakDetectorName="Template Peak Detector UI (MSD)"
+            peakDetectorName="Peak Detector UI [Template]"
             peakDetectorSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakDetectorSettings">
       </PeakDetector>
       <PeakDetector
-            description="This is the direct UI peak detector (MSD)."
+            description="This is the direct UI peak detector."
             id="net.openchrom.xxd.process.supplier.templates.ui.msd.direct"
             peakDetector="net.openchrom.xxd.process.supplier.templates.ui.core.PeakDetectorDirectMSD"
-            peakDetectorName="Direct Peak Detector UI (MSD)"
+            peakDetectorName="Peak Detector UI [Direct]"
             peakDetectorSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakDetectorDirectSettings">
       </PeakDetector>      
    </extension>
    <extension
          point="org.eclipse.chemclipse.chromatogram.csd.peak.detector.peakDetectorSupplier">
       <PeakDetector
-            description="This is the template UI peak detector (CSD)."
-            id="net.openchrom.xxd.process.supplier.templates.ui.csd"
+            description="This is the template UI peak detector."
+            id="net.openchrom.xxd.process.supplier.templates.ui.csd.template"
             peakDetector="net.openchrom.xxd.process.supplier.templates.ui.core.PeakDetectorCSD"
-            peakDetectorName="Template Peak Detector UI (CSD)"
+            peakDetectorName="Peak Detector UI [Template]"
             peakDetectorSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakDetectorSettings">
       </PeakDetector>
       <PeakDetector
-            description="This is the direct UI peak detector (CSD)."
+            description="This is the direct UI peak detector."
             id="net.openchrom.xxd.process.supplier.templates.ui.csd.direct"
             peakDetector="net.openchrom.xxd.process.supplier.templates.ui.core.PeakDetectorDirectCSD"
-            peakDetectorName="Direct Peak Detector UI (CSD)"
+            peakDetectorName="Peak Detector UI [Direct]"
             peakDetectorSettings="net.openchrom.xxd.process.supplier.templates.settings.PeakDetectorDirectSettings">
       </PeakDetector>      
    </extension>
