--- a/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
+++ b/openchrom/plugins/net.openchrom.xxd.process.supplier.templates.ui/plugin.xml
@@ -27,25 +27,25 @@
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakDetectorCSD">
       </page>
       <page
-            name="Peak Identifier Template (MSD)"
+            name="Peak Identifier Template"
             category="org.eclipse.chemclipse.chromatogram.msd.identifier.ui.preferences.identifierPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakIdentifierMSD"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakIdentifierMSD">
       </page>
       <page
-            name="Peak Identifier Template (CSD)"
+            name="Peak Identifier Template"
             category="org.eclipse.chemclipse.chromatogram.csd.identifier.ui.preferences.preferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakIdentifierCSD"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakIdentifierCSD">
       </page>
       <page
-            name="Peak Review Template (MSD)"
+            name="Peak Review Template"
             category="org.eclipse.chemclipse.chromatogram.msd.identifier.ui.preferences.identifierPreferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakReviewMSD"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakReviewMSD">
       </page>
       <page
-            name="Peak Review Template (CSD)"
+            name="Peak Review Template"
             category="org.eclipse.chemclipse.chromatogram.csd.identifier.ui.preferences.preferencePage"
             class="net.openchrom.xxd.process.supplier.templates.ui.preferences.PagePeakReviewCSD"
             id="net.openchrom.xxd.process.supplier.templates.ui.preferences.pagePeakReviewCSD">
