--- a/openchrom/plugins/pom.xml
+++ b/openchrom/plugins/pom.xml
@@ -20,6 +20,9 @@
 		<module>net.openchrom.chromatogram.msd.processor.supplier.massshiftdetector.fragment.test</module>
 		<module>net.openchrom.chromatogram.msd.processor.supplier.massshiftdetector.ui</module>
 		<module>net.openchrom.chromatogram.msd.processor.supplier.massshiftdetector</module>
+		<module>net.openchrom.msd.converter.supplier.btmsp.fragment.test</module>
+		<module>net.openchrom.msd.converter.supplier.btmsp.ui</module>
+		<module>net.openchrom.msd.converter.supplier.btmsp</module>
 		<module>net.openchrom.csd.converter.supplier.cdf.fragment.test</module>
 		<module>net.openchrom.csd.converter.supplier.cdf.ui</module>
 		<module>net.openchrom.csd.converter.supplier.cdf</module>
