--- a/openchrom/plugins/pom.xml
+++ b/openchrom/plugins/pom.xml
@@ -84,5 +84,8 @@
 		<module>net.openchrom.xxd.processor.supplier.tracecompare.ui</module>
 		<module>net.openchrom.xxd.processor.supplier.tracecompare</module>
 		<module>net.openchrom.rcp.compilation.community.ui</module>
+		<module>net.openchrom.msd.converter.supplier.peaks</module>
+		<module>net.openchrom.msd.converter.supplier.peaks.fragment.test</module>
+		<module>net.openchrom.msd.converter.supplier.peaks.ui</module>
 	</modules>
 </project>
