--- a/openchrom/features/pom.xml
+++ b/openchrom/features/pom.xml
@@ -61,5 +61,6 @@
 		<module>net.openchrom.xxd.process.supplier.templates.feature</module>
 		<module>net.openchrom.xxd.processor.supplier.tracecompare.feature</module>
 		<module>net.openchrom.msd.converter.supplier.peaks.feature</module>
+		<module>net.openchrom.msd.converter.supplier.pkf.feature</module>
 	</modules>
 </project>
