Fix duplicate entry.

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 # Sponsor links
-custom: ["https://www.paypal.com/donate/?item_name=Donation+to+OpenChrom&cmd=_donations&business=philip.wenig%40openchrom.net", paypal.com]
+custom: "https://www.paypal.com/donate/?item_name=Donation+to+OpenChrom&cmd=_donations&business=philip.wenig%40openchrom.net"
